style(login): fix login view overflow

--- a/client/src/app/components/sidebar/sidebar.component.scss
+++ b/client/src/app/components/sidebar/sidebar.component.scss
@@ -2,11 +2,12 @@
  * @Author                : Jbristhuille<jbristhuille@gmail.com>             *
  * @CreatedDate           : 2025-06-06 15:52:26                              *
  * @LastEditors           : Jbristhuille<jbristhuille@gmail.com>             *
- * @LastEditDate          : 2025-06-06 16:16:33                              *
+ * @LastEditDate          : 2025-06-10 14:13:06                              *
  ****************************************************************************/
 
 .sidebar-component {
   height: 100%;
+  width: 280px;
 
   .sidebar-menu {
     height: 100%;
