--- a/client/src/app/views/login/login.view.scss
+++ b/client/src/app/views/login/login.view.scss
@@ -2,12 +2,12 @@
  * @Author                : Jbristhuille<jbristhuille@gmail.com>             *
  * @CreatedDate           : 2025-06-04 14:34:31                              *
  * @LastEditors           : Jbristhuille<jbristhuille@gmail.com>             *
- * @LastEditDate          : 2025-06-04 14:36:04                              *
+ * @LastEditDate          : 2025-06-10 14:12:37                              *
  ****************************************************************************/
 
 .login-container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
