--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,3 +4,8 @@
  * @LastEditors           : Jbristhuille<jbristhuille@gmail.com>             *
  * @LastEditDate          : 2025-06-03 17:40:36                              *
  ****************************************************************************/
+
+ * {
+  margin: 0;
+  padding: 0;
+ }
